@@ -51,7 +51,7 @@ public class TaskManager {
         List<Map<String, Object>> tasks = readTasks();
         for(Map<String, Object> task : tasks){
             if(TaskStatus.valueOf(task.get("status").toString()) == taskStatus) {
-                System.out.println(task);
+                System.out.println(task.get("description").toString());
             }
         }
     }
@@ -70,7 +70,7 @@ public class TaskManager {
         if(isUpdated) {
             writeTasks(tasks);
         }
-        return true;
+        return isUpdated;
     }
 
     public boolean deleteTask (Integer id) throws IOException {
@@ -89,12 +89,29 @@ public class TaskManager {
         return isDeleted;
     }
 
+    public boolean changeStatus(TaskStatus taskStatus, int id) throws IOException {
+        List<Map<String, Object>> tasks = readTasks();
+        boolean statusChanged = false;
+        for (Map<String, Object> task : tasks) {
+            if (Integer.parseInt(task.get("id").toString()) == id) {
+                task.put("status", taskStatus);
+                task.put("updatedAt", LocalDateTime.now().toString());
+                statusChanged = true;
+                break;
+            }
+        }
+        if (statusChanged) {
+            writeTasks(tasks);
+        }
+        return statusChanged;
+    }
+
     private void writeTasks(List<Map<String, Object>> tasks) throws IOException {
         try (FileWriter writer = new FileWriter(FILE_NAME)) {
             // filter empty maps
             List<Map<String, Object>> nonEmptyTasks = tasks.stream()
                     .filter(task -> !task.isEmpty())  //skip empty
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (nonEmptyTasks.isEmpty()) {
                 writer.write("[]");
